# sem

./: .gitignore  CONTRIBUTING.md  README.md  flake.nix  package.nix  shell.nix  skills.md
crates/: Cargo.toml
crates/sem-cli/: Cargo.toml
crates/sem-cli/src/: main.rs
crates/sem-cli/src/commands/: blame.rs  graph.rs  impact.rs  log.rs  mod.rs  setup.rs
crates/sem-cli/src/formatters/: json.rs  markdown.rs
crates/sem-core/: Cargo.toml
crates/sem-core/src/git/: bridge.rs
crates/sem-core/src/parser/plugins/: svelte.rs
crates/sem-core/src/parser/plugins/code/: entity_extractor.rs  mod.rs
crates/sem-core/src/utils/: hash.rs
crates/sem-mcp/: Cargo.toml
docs/: agents.html  benchmarks.html  changelog.html  details.html  index.html  llms.txt
src/git/: bridge.ts
