[package]
name = "sem-cli"
version = "0.3.13"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Semantic version control CLI. Shows what entities changed (functions, classes, methods) instead of lines."
repository = "https://github.com/Ataraxy-Labs/sem"
homepage = "https://github.com/Ataraxy-Labs/sem"
keywords = ["diff", "semantic", "git", "cli", "code-review"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "sem"
path = "src/main.rs"

[dependencies]
sem-core = { path = "../sem-core", version = "0.3.13" }
clap = { version = "4", features = ["derive"] }
colored = "2"
similar = "2"
git2 = "0.20"
ignore = "0.4"
openssl-sys = { version = "0.9", optional = true }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
vendored-openssl = ["openssl-sys/vendored"]
